envoyfilter-teaching/envoyfilter/cluster/cluster-health_checks-tcp.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: cluster
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: LISTENER
    match:
      context: GATEWAY
    patch:
      operation: ADD
      value:
        name: proxy
        address:
          socket_address:
            protocol: TCP
            address: 0.0.0.0
            port_value: 31400
        traffic_direction: "OUTBOUND"
        filter_chains:
        - filters:
          - name: envoy.filters.network.tcp_proxy
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: tcp-echo_cluster
              statPrefix: tcp-echo_cluster
  - applyTo: CLUSTER
    patch:
      operation: ADD
      value:
          name: tcp-echo_cluster
          type: STRICT_DNS
          connect_timeout: 10s
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          health_checks:
          - timeout: 10s
            interval: 20s
            initial_jitter: 1s
            interval_jitter: 1s
            interval_jitter_percent: 50
            unhealthy_threshold: 5
            healthy_threshold: 3
            reuse_connection: true
            no_traffic_interval: 60s
            no_traffic_healthy_interval: 100s
            unhealthy_interval: 10s
            unhealthy_edge_interval: 30s
            healthy_edge_interval: 30s
            always_log_health_check_failures: false
            tls_options:
              alpn_protocols:
              - http1.1
              - h2
            transport_socket_match_criteria:
              useMTLS: false
            tcp_health_check:
              send:
                text: 000000FF
              receive: 
              - text: 000000FF
          load_assignment:
            cluster_name: tcp-echo_cluster
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                     socket_address:
                      address: tcp-echo.istio.svc.cluster.local
                      port_value: 9000
